Added file upload example

--- a/SeleniumTraining.csproj
+++ b/SeleniumTraining.csproj
@@ -29,6 +29,9 @@
     <None Update="Resources\Examples.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\avatar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
