Upload files add resource

--- a/SeleniumTraining.csproj
+++ b/SeleniumTraining.csproj
@@ -32,6 +32,9 @@
     <None Update="Resources\avatar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\avatar2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
